<resources>
    <string name="app_name">Recruta.me</string>
    <string name="login">Login</string>
    <string name="logout">Sair</string>
    <string name="loading">Carregando</string>
    <string name="ignorar">Ignorar</string>
    <string name="aplicar">Candidatar</string>
    <string name="sign_in_with_linkedin">Logar com LinkedIn</string>
    <string name="email">E-mail</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="password">Senha</string>
    <string name="fill_credential">Por favor, preencha as credenciais.</string>
    <string name="login_failed">Erro ao realizar o login!</string>
    <string name="linkedin_login_failed">Falha ao logar com LinkedIn.</string>
    <string name="register">Registrar</string>
    <string name="settings">Configurações</string>
    <string name="editProfile">Editar perfil</string>
    <string name="confirmPassword">Confirme a senha</string>
    <string name="password_doesnt_match">Senhas não combinam.</string>
    <string name="user_registered">Usuário registrado com sucesso.</string>
    <string name="error_weak_password">A senha informada é fraca.</string>
    <string name="error_invalid_email">O e-mail informado é inválido.</string>
    <string name="error_user_exists">O usuário informado já existe.</string>
    <string name="invalid_credentials">Credenciais inválidas.</string>
    <string name="error_register">Erro ao registrar o usuário.</string>
    <string name="or">OU</string>
    <string name="no_connection">Sem acesso à internet. Verifique sua conexão.</string>
    <string name="resetPassword">Redefinir senha</string>
    <string name="email_reset_password">E-mail de recuperação de senha enviado com sucesso!</string>
    <string name="type_email_address">Informe o endereço de e-mail!</string>
    <string name="reset_password_failed">Falha ao recuperar senha.</string>
    <string name="no_user_found">Não existe usuário com o e-mail informado.</string>
    <string name="maximum_distance">Distância máxima</string>
    <string name="distance">Km</string>
    <string name="default_maximum_distance">50</string>
    <string name="empty"></string>
    <string name="deleteAccount">Deletar conta</string>
    <string name="delete_account_failed">Falha ao deletar usuário.</string>
    <string name="delete_user_success">Usuário deletado com sucesso!</string>
    <string name="cancelar">Cancelar</string>
    <string name="type_password">Digite a sua senha</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="really_delete_account">Deseja realmente deletar a sua conta?</string>
    <string name="no_user_yet">Ainda não tem uma conta? Registre-se aqui.</string>
    <string name="really_logout">Deseja realmente sair?</string>
    <string name="fill_filters">Cadastre aqui os filtros para a busca das vagas desejadas</string>
    <string name="new_filter_hint">Ex: Analista, Recepcionista, etc...</string>
    <string name="insert_filter_term">Insira algum termo como filtro.</string>
    <string name="select_picture">Selecione uma foto</string>
    <string name="uploaded">Carregado</string>
    <string name="upload_failed">Falha ao enviar a foto.</string>
    <string name="uploading">Carregando</string>
    <string name="Uploading">Carregando...</string>
    <string name="change_photo">Trocar foto</string>
    <string name="user_created_with_linkedin">O usuário foi criado com uma conta do LinkedIn, portanto não é possível alterar a senha.</string>
    <string name="everything_set">Tudo pronto. Aproveite o Recruta.me.</string>
    <string name="got_it">ENTENDI</string>
    <string name="instructions_settings">Configure a distância máxima e os filtros de seu interesse para encontrar a vaga que você deseja</string>
    <string name="lets_go">VAMOS LÁ</string>
    <string name="welcome_app">Bem vindo ao Recruta-me, conheça agora nossa aplicação</string>
    <string name="instruction_profile">Preencha seus dados para que as empresas conheçam seu perfil</string>
    <string name="instructions_search">Encontre aqui as vagas desejadas</string>
    <string name="instructions_chat">Converse com as empresas que gostaram do seu perfil</string>
    <string name="default_country">BR</string>
    <string name="default_language">pt</string>
    <string name="less_than_one_km">Menos de 1 Km</string>
    <string name="waiting_permissions">Aguardando pelas permissões...</string>
    <string name="permissions_granted">Permissões concedidas...</string>
    <string name="permissions_needed">Algumas permissões são necessárias para a correta execução do aplicativo. Deseja continuar?</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="name">Nome</string>
    <string name="lastname">Sobrenome</string>
    <string name="birthdate">Data de nascimento</string>
    <string name="format_date_full">dd/MM/yyyy</string>
    <string name="format_date_no_day">MM/yyyy</string>
    <string name="uf">UF</string>
    <string name="city">Cidade</string>
    <string name="update_general_info_error">Erro ao atualizar os dados gerais.</string>
    <string name="gender">Gênero</string>
    <string name="not_given">Não informado</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="contact">Contato</string>
    <string name="details">Detalhes</string>
    <string name="update_contact_info_error">Erro ao atualizar os dados de contato.</string>
    <string name="website">Website</string>
    <string name="phone">Telefone</string>
    <string name="edit_contact">Editar contato</string>
    <string name="languages">Idiomas</string>
    <string name="elementary">Nível básico</string>
    <string name="limited_working">Nível básico a intermediário</string>
    <string name="professional_working">Nível intermediário</string>
    <string name="full_professional">Nível avançado</string>
    <string name="native_or_bilingual">Fluente ou nativo</string>
    <string name="edit_language">Editar Idioma</string>
    <string name="language">Idioma</string>
    <string name="proficiency">Proficiência</string>
    <string name="add_language">Adicionar Idioma</string>
    <string name="remove_language">Remover idioma</string>
    <string name="remove_language_error">Erro ao remover o idioma</string>
    <string name="update_language_info_error">Erro ao atualizar o idioma</string>
    <string name="add_language_info_error">Erro ao adicionar idioma</string>
    <string name="really_remove_language">Deseja realmente remover o idioma?</string>
    <string name="get_states_failed">Falha ao obter estados</string>
    <string name="get_cities_failed">Erro ao obter cidades</string>
    <string name="experience">Experiência</string>
    <string name="name_required">Informe o Nome</string>
    <string name="lastname_required">Informe o Sobrenome</string>
    <string name="birthdate_required">Informe a Data de nascimento</string>
    <string name="state_required">Informe o Estado</string>
    <string name="city_required">Informe a Cidade</string>
    <string name="present">Atualmente</string>
    <string name="years">anos</string>
    <string name="months">meses</string>
    <string name="remove_experience">Remover experiência</string>
    <string name="position">Cargo</string>
    <string name="company">Empresa</string>
    <string name="start">Início</string>
    <string name="end">Término</string>
    <string name="currently_working">Trabalho aqui atualmente</string>
    <string name="add_experience">Adicionar Experiência</string>
    <string name="edit_experience">Editar Experiência</string>
    <string name="remove_experience_error">Erro ao remover experiência</string>
    <string name="really_remove_experience">Deseja realmente remover a experiência?</string>
    <string name="experience_title_required">Informe o Cargo</string>
    <string name="experience_company_required">Informe a Empresa</string>
    <string name="start_required">Informe o Início</string>
    <string name="end_required">Informe o Término</string>
    <string name="language_name_required">Informe o idioma</string>
    <string name="proficiency_required">Informe a proficiência</string>
    <string name="email_required">Informe o e-mail</string>
    <string name="error_invalid_website">O website informado é inválido.</string>
    <string name="error_invalid_phone">O telefone informado é inválido.</string>
    <string name="Education">Formação acadêmica</string>
    <string name="education">Formação acadêmica</string>
    <string name="really_remove_education">Deseja realmente remover a formação acadêmica?</string>
    <string name="add_education">Adicionar formação acadêmica</string>
    <string name="edit_education">Editar formação acadêmica</string>
    <string name="update_education_info_error">Erro ao atualizar a formação acadêmica</string>
    <string name="remove_education_error">Erro ao remover formação acadêmica</string>
    <string name="degree_required">Informe a formação</string>
    <string name="school_required">Informe a instituição de ensino</string>
    <string name="remove_education">Remover formação acadêmica</string>
    <string name="school">Instituição de ensino</string>
    <string name="degree">Formação</string>
    <string name="end_prediction">Término ou Previsão</string>
    <string name="nao_aprovado">Você não tem mensagens!</string>
    <string name="procurar_emprego">Procurar emprego</string>
    <string name="year">ano</string>
    <string name="month">mês</string>
    <string-array name="nivel">
        <item>Profissional</item>
        <item>Superior</item>
        <item>Técnico</item>
        <item>Sem escolaridade</item>
    </string-array>
    <string-array name="nivel_idioma">
        <item>Básico</item>
        <item>Intermediário</item>
        <item>Avançado</item>
        <item>Fluente</item>
    </string-array>

    <string-array name="genders">
        <item>Não informado</item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

</resources>
