<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/InsideAppTheme"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".activity.profile.AddEditLanguageInfoActivity"
    android:id="@+id/mAddEditExperienceContainer">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mExperienceTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/position"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mExperienceCompanyTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/company"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mStartDateTxt"
            android:clickable="true"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/start"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout">
        <EditText
            android:id="@+id/mEndDateTxt"
            android:clickable="true"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/end"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:id="@+id/mCurrentWorkChk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currently_working"
        android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/mRemoveExperienceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/remove_experience"
        android:textColor="@color/primaryColor"
        android:visibility="gone"
        android:background="@null"/>
</LinearLayout>