<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/InsideAppTheme"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".activity.profile.AddEditEducationInfoActivity"
    android:id="@+id/mAddEditExperienceContainer">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mDegreeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/degree"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mSchoolTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/school"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mStartDateTxt"
            android:clickable="true"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/start"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:id="@+id/mEndDateContainer">
        <EditText
            android:id="@+id/mEndDateTxt"
            android:clickable="true"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/end_prediction"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/mRemoveEducationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/remove_education"
        android:textColor="@color/primaryColor"
        android:visibility="gone"
        android:background="@null"/>
</LinearLayout>