<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".activity.user.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
            <EditText
                android:id="@+id/mEmailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">
            <EditText
                android:id="@+id/mPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/mLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_login"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="@color/primaryColor"
            app:spinning_bar_padding="6dp"
            android:text="@string/login"
            android:padding="16dp"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:visibility="visible"
            android:textAllCaps="false"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="7dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"/>

            <View
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/linkedinLoginBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/sign_in_with_linkedin"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/li_logo"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:visibility="visible"
            android:textAllCaps="false"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/mRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_transparent"
        android:text="@string/no_user_yet"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="visible"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true" />
</RelativeLayout>