<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/InsideAppTheme"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".activity.profile.AddEditLanguageInfoActivity"
    android:id="@+id/mAddEditLanguageContainer">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:hintTextAppearance="@style/TextAppearance.App.ProfileInputLayout"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/mLanguageNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/language"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proficiency"
            android:textColor="@color/grey_700"
            android:textSize="12dip"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />
        <Spinner
            android:id="@+id/mProficiencySpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
    </LinearLayout>
    <Button
        android:id="@+id/mRemoveLanguageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/remove_language"
        android:textColor="@color/primaryColor"
        android:visibility="gone"
        android:background="@null"/>
</LinearLayout>